# ANTAR_MCP-PROJECT

./: .gitignore  LICENSE  README.md  Test.py  alpic.yaml  docker  main.py  pyproject.toml
workspace/: .eslintrc.js  README.md  SETUP_GUIDE.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
workspace/public/images/: README.md
workspace/src/app/: _app.tsx  globals.css  layout.tsx  page.tsx
workspace/src/app/about/: page.tsx
workspace/src/app/blog/: page.tsx
workspace/src/app/blog/[slug]/: page.tsx
workspace/src/app/contact/: page.tsx
workspace/src/app/projects/: page.tsx
workspace/src/components/: Footer.tsx  Navbar.tsx
workspace/src/src/: index.css
